frame/support/test/tests/decl_storage_ui/unit_type.stderr
error: `()` is not supported, because storage doesn't support inserting empty values.
  --> $DIR/unit_type.rs:29:21
   |
29 |         pub Value: Option<()>;
   |                           ^^
